# Sultan-AI-system

./: .env.example  .gitignore  README.md  backlog.md  check_sultan_stack.sh  pyproject.toml
00 Inicio/: 00_inicio.md  01_vision_general.md  02_objetivos.md  03_decision_log.md  04_backlog_inicial.md  05_pre_stage_09_readiness_plan.md  06_v1_completion_strategy_and_v2_operational_roadmap.md  SULTAN_Inicio_Fase0.docx
01 Blueprint + Memo/: 00_blueprint_unificado.md  03_roadmap.md
02 Data Platform/: .env.example
02 Data Platform/docs/: 00_data_platform_overview.md  01_data_sources.md  02_data_contracts.md  03_ingestion_architecture.md  04_storage_architecture.md  05_data_quality.md  06_prefect_orchestration.md  07_monitoring_and_tracking.md  08_database_schema.md  09_backlog_data_platform.md  10_decision_log.md  11_how_to_inspect_data.md  12_prefect_local_operations.md  13_data_gap_repair_and_backtesting_readiness.md  99_data_platform_v1_closure.md
02 Data Platform/flows/: config.py  ingest_ohlcv_flow.py  test_postgres_connection.py
02 Data Platform/mockups/: data_platform_monitoring_v1.html
02 Data Platform/schemas/: ohlcv_contract.md
02 Data Platform/scripts/: run_ohlcv_reconciliation.sh
02 Data Platform/sql/: 001_create_data_platform_tables.sql  002_operational_views.sql
03 Feature Engineering/docs/: 00_feature_engineering_overview.md  (+27 more)
06 Backtesting Engine/: README.md
Blueprint + Memo/: Blueprint_Maestro_Trading.docx  Investment_Memo_Trading.docx
docs/: 02_investment_memo.md  03_arquitectura_sistema.md  05_risk_policy.md  07_decision_log.md
(+270 files in other folders)
