[project]
name = "sultan-ai-system"
version = "0.1.0"
description = "Sistema algorítmico de trading con AI, data-first, risk-first y audit-first."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
